temp/bison.output
Grammar

    0 $accept: program $end

    1 program: file_definition_list

    2 file_definition_list: /* empty */
    3                     | file_definition_list file_definition

    4 file_definition: variable_definition_value ';'
    5                | function_definition
    6                | monitor_definition

    7 variable_declaration: TK_VARIABLE lower_ids_type

    8 lower_id_optional_type_expression: TK_LOWER_ID ':' type '=' expression
    9                                  | TK_LOWER_ID '=' expression

   10 variable_definition_value: TK_VALUE lower_id_optional_type_expression

   11 variable_definition_variable: TK_VARIABLE lower_id_optional_type_expression

   12 variable_definition: variable_definition_value
   13                    | variable_definition_variable

   14 function_definition: TK_FUNCTION TK_LOWER_ID parameter_list ':' type block
   15                    | TK_FUNCTION TK_LOWER_ID parameter_list block

   16 monitor_definition: TK_MONITOR TK_UPPER_ID monitor_body

   17 type: TK_UPPER_ID
   18     | '[' type ']'
   19     | TK_IMMUTABLE '[' type ']'

   20 block: '{' block_content_list '}'

   21 block_content_list: /* empty */
   22                   | block_content_list block_content

   23 block_content: variable_declaration ';'
   24              | block_variable_definition ';'
   25              | statement

   26 statement: simple_statement ';'
   27          | compound_statement

   28 simple_statement: statement_assignment
   29                 | function_call
   30                 | TK_WAIT TK_FOR expression TK_IN expression
   31                 | TK_SIGNAL expression
   32                 | TK_BROADCAST expression
   33                 | TK_RETURN
   34                 | TK_RETURN expression

   35 compound_statement: TK_IF expression block else
   36                   | TK_WHILE expression block
   37                   | TK_SPAWN block
   38                   | block

   39 else: /* empty */
   40     | TK_ELSE TK_IF expression block else
   41     | TK_ELSE block

   42 statement_assignment: variable '=' expression
   43                     | variable TK_ADD_ASG expression
   44                     | variable TK_SUB_ASG expression
   45                     | variable TK_MUL_ASG expression
   46                     | variable TK_DIV_ASG expression

   47 variable: TK_LOWER_ID
   48         | primary_expression '[' expression ']'

   49 expression: expression TK_OR expression
   50           | expression TK_AND expression
   51           | expression TK_EQUAL expression
   52           | expression TK_NEQUAL expression
   53           | expression TK_LEQUAL expression
   54           | expression TK_GEQUAL expression
   55           | expression '<' expression
   56           | expression '>' expression
   57           | expression '+' expression
   58           | expression '-' expression
   59           | expression '*' expression
   60           | expression '/' expression
   61           | '-' expression
   62           | TK_NOT expression
   63           | primary_expression

   64 primary_expression: literal
   65                   | variable
   66                   | function_call
   67                   | '(' expression ')'

   68 literal: TK_TRUE
   69        | TK_FALSE
   70        | TK_INTEGER
   71        | TK_FLOAT
   72        | TK_STRING
   73        | '[' expression_list1 ']'
   74        | TK_IMMUTABLE '[' expression_list1 ']'

   75 function_call: TK_LOWER_ID '(' expression_list0 ')'
   76              | primary_expression '.' TK_LOWER_ID '(' expression_list0 ')'
   77              | type '(' expression_list0 ')'

   78 monitor_body: '{' monitor_body_definition_list '}'

   79 monitor_body_definition_list: /* empty */
   80                             | monitor_body_definition_list monitor_body_definition

   81 monitor_body_definition: variable_declaration ';'
   82                        | variable_definition ';'
   83                        | method_definition
   84                        | constructor_definition

   85 method_definition: TK_PRIVATE function_definition
   86                  | function_definition

   87 constructor_definition: TK_INITIALIZER parameter_list block

   88 expression_list0: /* empty */
   89                 | expression_list1

   90 expression_list1: expression
   91                 | expression_list1 ',' expression

   92 lower_id_type: TK_LOWER_ID ':' type

   93 lower_ids: TK_LOWER_ID
   94          | lower_ids ',' TK_LOWER_ID

   95 lower_ids_type: lower_id_type
   96               | lower_ids ',' lower_id_type

   97 parameter_list: /* empty */
   98               | '(' parameters ')'

   99 parameters: parameter
  100           | parameters ',' parameter

  101 parameter: lower_ids_type

  102 block_variable_definition: variable_definition
  103                          | TK_LOWER_ID TK_DEF_ASG expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 67 75 76 77 98
')' (41) 67 75 76 77 98
'*' (42) 59
'+' (43) 57
',' (44) 91 94 96 100
'-' (45) 58 61
'.' (46) 76
'/' (47) 60
':' (58) 8 14 92
';' (59) 4 23 24 26 81 82
'<' (60) 55
'=' (61) 8 9 42
'>' (62) 56
'[' (91) 18 19 48 73 74
']' (93) 18 19 48 73 74
'{' (123) 20 78
'}' (125) 20 78
error (256)
TK_IMMUTABLE (258) 19 74
TK_VALUE (259) 10
TK_VARIABLE (260) 7 11
TK_FUNCTION (261) 14 15
TK_WHILE (262) 36
TK_WAIT (263) 30
TK_IN (264) 30
TK_SIGNAL (265) 31
TK_BROADCAST (266) 32
TK_RETURN (267) 33 34
TK_IF (268) 35 40
TK_ELSE (269) 40 41
TK_FOR (270) 30
TK_SPAWN (271) 37
TK_TRUE (272) 68
TK_FALSE (273) 69
TK_MONITOR (274) 16
TK_PRIVATE (275) 85
TK_INITIALIZER (276) 87
TK_DEF_ASG (277) 103
TK_ADD_ASG (278) 43
TK_SUB_ASG (279) 44
TK_MUL_ASG (280) 45
TK_DIV_ASG (281) 46
TK_INTEGER (282) 70
TK_FLOAT (283) 71
TK_STRING (284) 72
TK_LOWER_ID (285) 8 9 14 15 47 75 76 92 93 94 103
TK_UPPER_ID (286) 16 17
TK_OR (287) 49
TK_AND (288) 50
TK_NEQUAL (289) 52
TK_EQUAL (290) 51
TK_GEQUAL (291) 54
TK_LEQUAL (292) 53
TK_NOT (293) 62


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
program (57)
    on left: 1, on right: 0
file_definition_list (58)
    on left: 2 3, on right: 1 3
file_definition (59)
    on left: 4 5 6, on right: 3
variable_declaration (60)
    on left: 7, on right: 23 81
lower_id_optional_type_expression (61)
    on left: 8 9, on right: 10 11
variable_definition_value (62)
    on left: 10, on right: 4 12
variable_definition_variable (63)
    on left: 11, on right: 13
variable_definition (64)
    on left: 12 13, on right: 82 102
function_definition (65)
    on left: 14 15, on right: 5 85 86
monitor_definition (66)
    on left: 16, on right: 6
type (67)
    on left: 17 18 19, on right: 8 14 18 19 77 92
block (68)
    on left: 20, on right: 14 15 35 36 37 38 40 41 87
block_content_list (69)
    on left: 21 22, on right: 20 22
block_content (70)
    on left: 23 24 25, on right: 22
statement (71)
    on left: 26 27, on right: 25
simple_statement (72)
    on left: 28 29 30 31 32 33 34, on right: 26
compound_statement (73)
    on left: 35 36 37 38, on right: 27
else (74)
    on left: 39 40 41, on right: 35 40
statement_assignment (75)
    on left: 42 43 44 45 46, on right: 28
variable (76)
    on left: 47 48, on right: 42 43 44 45 46 65
expression (77)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63,
    on right: 8 9 30 31 32 34 35 36 40 42 43 44 45 46 48 49 50 51 52
    53 54 55 56 57 58 59 60 61 62 67 90 91 103
primary_expression (78)
    on left: 64 65 66 67, on right: 48 63 76
literal (79)
    on left: 68 69 70 71 72 73 74, on right: 64
function_call (80)
    on left: 75 76 77, on right: 29 66
monitor_body (81)
    on left: 78, on right: 16
monitor_body_definition_list (82)
    on left: 79 80, on right: 78 80
monitor_body_definition (83)
    on left: 81 82 83 84, on right: 80
method_definition (84)
    on left: 85 86, on right: 83
constructor_definition (85)
    on left: 87, on right: 84
expression_list0 (86)
    on left: 88 89, on right: 75 76 77
expression_list1 (87)
    on left: 90 91, on right: 73 74 89 91
lower_id_type (88)
    on left: 92, on right: 95 96
lower_ids (89)
    on left: 93 94, on right: 94 96
lower_ids_type (90)
    on left: 95 96, on right: 7 101
parameter_list (91)
    on left: 97 98, on right: 14 15 87
parameters (92)
    on left: 99 100, on right: 98 100
parameter (93)
    on left: 101, on right: 99 100
block_variable_definition (94)
    on left: 102 103, on right: 24


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (file_definition_list)

    program               go to state 1
    file_definition_list  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: file_definition_list .
    3 file_definition_list: file_definition_list . file_definition

    TK_VALUE     shift, and go to state 4
    TK_FUNCTION  shift, and go to state 5
    TK_MONITOR   shift, and go to state 6

    $default  reduce using rule 1 (program)

    file_definition            go to state 7
    variable_definition_value  go to state 8
    function_definition        go to state 9
    monitor_definition         go to state 10


state 3

    0 $accept: program $end .

    $default  accept


state 4

   10 variable_definition_value: TK_VALUE . lower_id_optional_type_expression

    TK_LOWER_ID  shift, and go to state 11

    lower_id_optional_type_expression  go to state 12


state 5

   14 function_definition: TK_FUNCTION . TK_LOWER_ID parameter_list ':' type block
   15                    | TK_FUNCTION . TK_LOWER_ID parameter_list block

    TK_LOWER_ID  shift, and go to state 13


state 6

   16 monitor_definition: TK_MONITOR . TK_UPPER_ID monitor_body

    TK_UPPER_ID  shift, and go to state 14


state 7

    3 file_definition_list: file_definition_list file_definition .

    $default  reduce using rule 3 (file_definition_list)


state 8

    4 file_definition: variable_definition_value . ';'

    ';'  shift, and go to state 15


state 9

    5 file_definition: function_definition .

    $default  reduce using rule 5 (file_definition)


state 10

    6 file_definition: monitor_definition .

    $default  reduce using rule 6 (file_definition)


state 11

    8 lower_id_optional_type_expression: TK_LOWER_ID . ':' type '=' expression
    9                                  | TK_LOWER_ID . '=' expression

    '='  shift, and go to state 16
    ':'  shift, and go to state 17


state 12

   10 variable_definition_value: TK_VALUE lower_id_optional_type_expression .

    $default  reduce using rule 10 (variable_definition_value)


state 13

   14 function_definition: TK_FUNCTION TK_LOWER_ID . parameter_list ':' type block
   15                    | TK_FUNCTION TK_LOWER_ID . parameter_list block

    '('  shift, and go to state 18

    $default  reduce using rule 97 (parameter_list)

    parameter_list  go to state 19


state 14

   16 monitor_definition: TK_MONITOR TK_UPPER_ID . monitor_body

    '{'  shift, and go to state 20

    monitor_body  go to state 21


state 15

    4 file_definition: variable_definition_value ';' .

    $default  reduce using rule 4 (file_definition)


state 16

    9 lower_id_optional_type_expression: TK_LOWER_ID '=' . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 36
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 17

    8 lower_id_optional_type_expression: TK_LOWER_ID ':' . type '=' expression

    '['           shift, and go to state 40
    TK_IMMUTABLE  shift, and go to state 41
    TK_UPPER_ID   shift, and go to state 31

    type  go to state 42


state 18

   98 parameter_list: '(' . parameters ')'

    TK_LOWER_ID  shift, and go to state 43

    lower_id_type   go to state 44
    lower_ids       go to state 45
    lower_ids_type  go to state 46
    parameters      go to state 47
    parameter       go to state 48


state 19

   14 function_definition: TK_FUNCTION TK_LOWER_ID parameter_list . ':' type block
   15                    | TK_FUNCTION TK_LOWER_ID parameter_list . block

    '{'  shift, and go to state 49
    ':'  shift, and go to state 50

    block  go to state 51


state 20

   78 monitor_body: '{' . monitor_body_definition_list '}'

    $default  reduce using rule 79 (monitor_body_definition_list)

    monitor_body_definition_list  go to state 52


state 21

   16 monitor_definition: TK_MONITOR TK_UPPER_ID monitor_body .

    $default  reduce using rule 16 (monitor_definition)


state 22

   18 type: '[' . type ']'
   73 literal: '[' . expression_list1 ']'

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 53
    variable            go to state 35
    expression          go to state 54
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39
    expression_list1    go to state 55


state 23

   67 primary_expression: '(' . expression ')'

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 56
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 24

   19 type: TK_IMMUTABLE . '[' type ']'
   74 literal: TK_IMMUTABLE . '[' expression_list1 ']'

    '['  shift, and go to state 57


state 25

   68 literal: TK_TRUE .

    $default  reduce using rule 68 (literal)


state 26

   69 literal: TK_FALSE .

    $default  reduce using rule 69 (literal)


state 27

   70 literal: TK_INTEGER .

    $default  reduce using rule 70 (literal)


state 28

   71 literal: TK_FLOAT .

    $default  reduce using rule 71 (literal)


state 29

   72 literal: TK_STRING .

    $default  reduce using rule 72 (literal)


state 30

   47 variable: TK_LOWER_ID .
   75 function_call: TK_LOWER_ID . '(' expression_list0 ')'

    '('  shift, and go to state 58

    $default  reduce using rule 47 (variable)


state 31

   17 type: TK_UPPER_ID .

    $default  reduce using rule 17 (type)


state 32

   61 expression: '-' . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 59
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 33

   62 expression: TK_NOT . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 60
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 34

   77 function_call: type . '(' expression_list0 ')'

    '('  shift, and go to state 61


state 35

   65 primary_expression: variable .

    $default  reduce using rule 65 (primary_expression)


state 36

    9 lower_id_optional_type_expression: TK_LOWER_ID '=' expression .
   49 expression: expression . TK_OR expression
   50           | expression . TK_AND expression
   51           | expression . TK_EQUAL expression
   52           | expression . TK_NEQUAL expression
   53           | expression . TK_LEQUAL expression
   54           | expression . TK_GEQUAL expression
   55           | expression . '<' expression
   56           | expression . '>' expression
   57           | expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression

    TK_OR      shift, and go to state 62
    TK_AND     shift, and go to state 63
    TK_NEQUAL  shift, and go to state 64
    TK_EQUAL   shift, and go to state 65
    '<'        shift, and go to state 66
    '>'        shift, and go to state 67
    TK_GEQUAL  shift, and go to state 68
    TK_LEQUAL  shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71
    '*'        shift, and go to state 72
    '/'        shift, and go to state 73

    $default  reduce using rule 9 (lower_id_optional_type_expression)


state 37

   48 variable: primary_expression . '[' expression ']'
   63 expression: primary_expression .
   76 function_call: primary_expression . '.' TK_LOWER_ID '(' expression_list0 ')'

    '['  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 63 (expression)


state 38

   64 primary_expression: literal .

    $default  reduce using rule 64 (primary_expression)


state 39

   66 primary_expression: function_call .

    $default  reduce using rule 66 (primary_expression)


state 40

   18 type: '[' . type ']'

    '['           shift, and go to state 40
    TK_IMMUTABLE  shift, and go to state 41
    TK_UPPER_ID   shift, and go to state 31

    type  go to state 76


state 41

   19 type: TK_IMMUTABLE . '[' type ']'

    '['  shift, and go to state 77


state 42

    8 lower_id_optional_type_expression: TK_LOWER_ID ':' type . '=' expression

    '='  shift, and go to state 78


state 43

   92 lower_id_type: TK_LOWER_ID . ':' type
   93 lower_ids: TK_LOWER_ID .

    ':'  shift, and go to state 79

    $default  reduce using rule 93 (lower_ids)


state 44

   95 lower_ids_type: lower_id_type .

    $default  reduce using rule 95 (lower_ids_type)


state 45

   94 lower_ids: lower_ids . ',' TK_LOWER_ID
   96 lower_ids_type: lower_ids . ',' lower_id_type

    ','  shift, and go to state 80


state 46

  101 parameter: lower_ids_type .

    $default  reduce using rule 101 (parameter)


state 47

   98 parameter_list: '(' parameters . ')'
  100 parameters: parameters . ',' parameter

    ')'  shift, and go to state 81
    ','  shift, and go to state 82


state 48

   99 parameters: parameter .

    $default  reduce using rule 99 (parameters)


state 49

   20 block: '{' . block_content_list '}'

    $default  reduce using rule 21 (block_content_list)

    block_content_list  go to state 83


state 50

   14 function_definition: TK_FUNCTION TK_LOWER_ID parameter_list ':' . type block

    '['           shift, and go to state 40
    TK_IMMUTABLE  shift, and go to state 41
    TK_UPPER_ID   shift, and go to state 31

    type  go to state 84


state 51

   15 function_definition: TK_FUNCTION TK_LOWER_ID parameter_list block .

    $default  reduce using rule 15 (function_definition)


state 52

   78 monitor_body: '{' monitor_body_definition_list . '}'
   80 monitor_body_definition_list: monitor_body_definition_list . monitor_body_definition

    '}'             shift, and go to state 85
    TK_VALUE        shift, and go to state 4
    TK_VARIABLE     shift, and go to state 86
    TK_FUNCTION     shift, and go to state 5
    TK_PRIVATE      shift, and go to state 87
    TK_INITIALIZER  shift, and go to state 88

    variable_declaration          go to state 89
    variable_definition_value     go to state 90
    variable_definition_variable  go to state 91
    variable_definition           go to state 92
    function_definition           go to state 93
    monitor_body_definition       go to state 94
    method_definition             go to state 95
    constructor_definition        go to state 96


state 53

   18 type: '[' type . ']'
   77 function_call: type . '(' expression_list0 ')'

    ']'  shift, and go to state 97
    '('  shift, and go to state 61


state 54

   49 expression: expression . TK_OR expression
   50           | expression . TK_AND expression
   51           | expression . TK_EQUAL expression
   52           | expression . TK_NEQUAL expression
   53           | expression . TK_LEQUAL expression
   54           | expression . TK_GEQUAL expression
   55           | expression . '<' expression
   56           | expression . '>' expression
   57           | expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   90 expression_list1: expression .

    TK_OR      shift, and go to state 62
    TK_AND     shift, and go to state 63
    TK_NEQUAL  shift, and go to state 64
    TK_EQUAL   shift, and go to state 65
    '<'        shift, and go to state 66
    '>'        shift, and go to state 67
    TK_GEQUAL  shift, and go to state 68
    TK_LEQUAL  shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71
    '*'        shift, and go to state 72
    '/'        shift, and go to state 73

    $default  reduce using rule 90 (expression_list1)


state 55

   73 literal: '[' expression_list1 . ']'
   91 expression_list1: expression_list1 . ',' expression

    ']'  shift, and go to state 98
    ','  shift, and go to state 99


state 56

   49 expression: expression . TK_OR expression
   50           | expression . TK_AND expression
   51           | expression . TK_EQUAL expression
   52           | expression . TK_NEQUAL expression
   53           | expression . TK_LEQUAL expression
   54           | expression . TK_GEQUAL expression
   55           | expression . '<' expression
   56           | expression . '>' expression
   57           | expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   67 primary_expression: '(' expression . ')'

    ')'        shift, and go to state 100
    TK_OR      shift, and go to state 62
    TK_AND     shift, and go to state 63
    TK_NEQUAL  shift, and go to state 64
    TK_EQUAL   shift, and go to state 65
    '<'        shift, and go to state 66
    '>'        shift, and go to state 67
    TK_GEQUAL  shift, and go to state 68
    TK_LEQUAL  shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71
    '*'        shift, and go to state 72
    '/'        shift, and go to state 73


state 57

   19 type: TK_IMMUTABLE '[' . type ']'
   74 literal: TK_IMMUTABLE '[' . expression_list1 ']'

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 101
    variable            go to state 35
    expression          go to state 54
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39
    expression_list1    go to state 102


state 58

   75 function_call: TK_LOWER_ID '(' . expression_list0 ')'

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    $default  reduce using rule 88 (expression_list0)

    type                go to state 34
    variable            go to state 35
    expression          go to state 54
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39
    expression_list0    go to state 103
    expression_list1    go to state 104


state 59

   49 expression: expression . TK_OR expression
   50           | expression . TK_AND expression
   51           | expression . TK_EQUAL expression
   52           | expression . TK_NEQUAL expression
   53           | expression . TK_LEQUAL expression
   54           | expression . TK_GEQUAL expression
   55           | expression . '<' expression
   56           | expression . '>' expression
   57           | expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   61           | '-' expression .

    $default  reduce using rule 61 (expression)


state 60

   49 expression: expression . TK_OR expression
   50           | expression . TK_AND expression
   51           | expression . TK_EQUAL expression
   52           | expression . TK_NEQUAL expression
   53           | expression . TK_LEQUAL expression
   54           | expression . TK_GEQUAL expression
   55           | expression . '<' expression
   56           | expression . '>' expression
   57           | expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   62           | TK_NOT expression .

    $default  reduce using rule 62 (expression)


state 61

   77 function_call: type '(' . expression_list0 ')'

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    $default  reduce using rule 88 (expression_list0)

    type                go to state 34
    variable            go to state 35
    expression          go to state 54
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39
    expression_list0    go to state 105
    expression_list1    go to state 104


state 62

   49 expression: expression TK_OR . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 106
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 63

   50 expression: expression TK_AND . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 107
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 64

   52 expression: expression TK_NEQUAL . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 108
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 65

   51 expression: expression TK_EQUAL . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 109
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 66

   55 expression: expression '<' . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 110
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 67

   56 expression: expression '>' . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 111
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 68

   54 expression: expression TK_GEQUAL . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 112
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 69

   53 expression: expression TK_LEQUAL . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 113
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 70

   57 expression: expression '+' . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 114
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 71

   58 expression: expression '-' . expression

    '['           shift, and go to state 22
    '('           shift, and go to state 23
    TK_IMMUTABLE  shift, and go to state 24
    TK_TRUE       shift, and go to state 25
    TK_FALSE      shift, and go to state 26
    TK_INTEGER    shift, and go to state 27
    TK_FLOAT      shift, and go to state 28
    TK_STRING     shift, and go to state 29
    TK_LOWER_ID   shift, and go to state 30
    TK_UPPER_ID   shift, and go to state 31
    '-'           shift, and go to state 32
    TK_NOT        shift, and go to state 33

    type                go to state 34
    variable            go to state 35
    expression          go to state 115
    primary_expression  go to state 37
    literal             go to state 38
    function_call       go to state 39


state 72

   59 expression: expression '*' . expression
